--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,7 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:fontFamily="serif"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:text="4"
         android:textSize="35sp"
@@ -29,8 +28,7 @@
         android:layout_width="122dp"
         android:layout_height="80dp"
         android:fontFamily="serif"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:text="5"
         android:textSize="35sp"
@@ -44,8 +42,7 @@
         android:layout_width="122dp"
         android:layout_height="80dp"
         android:fontFamily="serif"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:text="6"
         android:textSize="35sp"
@@ -119,8 +116,7 @@
         android:layout_height="75dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:fontFamily="serif"
         android:text="1"
@@ -136,8 +132,7 @@
         android:layout_width="122dp"
         android:layout_height="75dp"
         android:fontFamily="serif"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:text="2"
         android:textSize="35sp"
@@ -152,8 +147,7 @@
         android:layout_height="75dp"
         android:layout_marginRight="8dp"
         android:fontFamily="serif"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:text="3"
         android:textSize="35sp"
@@ -167,8 +161,7 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:fontFamily="serif"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:text="8"
         android:textSize="35sp"
@@ -181,8 +174,7 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:fontFamily="serif"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:text="0"
         android:textSize="35sp"
@@ -195,8 +187,7 @@
         android:layout_width="122dp"
         android:layout_height="80dp"
         android:fontFamily="serif"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:text="9"
         android:textSize="35sp"
@@ -206,10 +197,9 @@
 
     <ImageButton
         android:id="@+id/startTimer"
-        style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:background="#FAFAFA"
+        android:background="@android:color/transparent"
         android:fontFamily="serif"
         android:gravity="center"
         android:scaleType="centerInside"
@@ -226,8 +216,7 @@
         android:layout_width="122dp"
         android:layout_height="80dp"
         android:fontFamily="serif"
-        android:background="#FAFAFA"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:text="7"
         android:textSize="35sp"
@@ -237,10 +226,9 @@
 
     <ImageButton
         android:id="@+id/deleteLastNumber"
-        style="?android:attr/borderlessButtonStyle"
         android:layout_width="122dp"
         android:layout_height="80dp"
-        android:background="#FAFAFA"
+        android:background="@android:color/transparent"
         android:fontFamily="serif"
         android:gravity="center"
         android:scaleType="centerInside"
